--- a/GameData/OPM/Localization/fr-fr.cfg
+++ b/GameData/OPM/Localization/fr-fr.cfg
@@ -1,5 +1,8 @@
 // Travail de traduction en cours, vous êtes libre d’y participer ! //
 
+
+// Traduit par : Kierra
+
 // État : Traduction : en cours
 	Relecture auteur : à venir
 	Relecture tierce : à venir
