--- a/GameData/OPM/Localization/fr-fr.cfg
+++ b/GameData/OPM/Localization/fr-fr.cfg
@@ -4,14 +4,12 @@
 // Traduit par : Kierra
 
 // État : Traduction : en cours
-	Relecture auteur : à venir
-	Relecture tierce : à venir
+// Relecture auteur : à venir
+// Relecture tierce : à venir
 
 Localization
 {
-	en-usLocalization
-{
-	en-us
+	fr-fr
 	{
         //Sarnus
 		#LOC_OPM_Sarnus_displayName = Sarnus^N
